@@ -246,7 +246,7 @@ class ExportMusicXml {
       void rest(Rest* chord, int staff);
       void clef(int staff, int clef);
       void timesig(TimeSig* tsig);
-      void keysig(int key, bool visible = true);
+      void keysig(int key, int staff = 0, bool visible = true);
       void barlineLeft(Measure* m);
       void barlineRight(Measure* m);
       void pitch2xml(Note* note, char& c, int& alter, int& octave);
@@ -1610,13 +1610,15 @@ void ExportMusicXml::timesig(TimeSig* tsig)
 //   keysig
 //---------------------------------------------------------
 
-void ExportMusicXml::keysig(int key, bool visible)
+void ExportMusicXml::keysig(int key, int staff, bool visible)
       {
+      QString tg = "key";
+      if (staff)
+            tg += QString(" number=\"%1\"").arg(staff);
+      if (!visible)
+            tg += " print-object=\"no\"";
       attr.doAttr(xml, true);
-      if (visible)
-            xml.stag("key");
-      else
-            xml.stag("key print-object=\"no\"");
+      xml.stag(tg);
       xml.tag("fifths", key);
       xml.tag("mode", QString("major"));
       xml.etag();
@@ -3595,8 +3597,8 @@ static void spannerStop(ExportMusicXml* exp, int strack, int etrack, int track, 
 
 void ExportMusicXml::keysigTimesig(Measure* m, int strack, int etrack)
       {
-      printf("issue12382 m=%p score=%p strack=%d etrack=%d)\n", m, score, strack, etrack);
-      KeySig* ksig = 0;
+      // search all staves for non-generated key signatures
+      QMap<int, KeySig*> keysigs; // map staff to key signature
       for (Segment* seg = m->first(); seg; seg = seg->next()) {
             if (seg->tick() > m->tick())
                   break;
@@ -3605,26 +3607,45 @@ void ExportMusicXml::keysigTimesig(Measure* m, int strack, int etrack)
                   if (!el)
                         continue;
                   if (el->type() == KEYSIG) {
-                        ksig = (KeySig*) el;
-                        printf("issue12382 t=%d ksig=%p type=%d\n", t, ksig, ksig->keySignature());
+                        int st = (t - strack) / VOICES;
+                        if (!el->generated())
+                              keysigs[st] = static_cast<KeySig*>(el);
                         }
                   }
             }
-      if (ksig) {
-            // output only keysig changes, not generated keysigs
-            // at line beginning
-            int ti = ksig->tick();
-            //TODO_K
-            KeyList* kl = score->staff(strack/VOICES)->keymap();
-            KeySigEvent key = kl->key(ti);
-            ciKeyList ci = kl->find(ti);
-            if (ci != kl->end()) {
-                  keysig(key.accidentalType(), ksig->visible());
+
+      // write the key signatues
+      if (!keysigs.isEmpty()) {
+            // determine if all staves have a keysig and all keysigs are identical
+            // in that case a single <key> is written, without number=... attribute
+            int nstaves = (etrack - strack) / VOICES;
+            bool singleKey = true;
+            // check if all staves have a keysig
+            for (int i = 0; i < nstaves; i++)
+                  if (!keysigs.contains(i))
+                        singleKey = false;
+            // check if all keysigs are identical
+            if (singleKey)
+                  for (int i = 1; i < nstaves; i++)
+                        if (!(keysigs.value(i)->keySignature() == keysigs.value(0)->keySignature()))
+                              singleKey = false;
+
+            // write the keysigs
+            if (singleKey) {
+                  // keysig applies to all staves
+                  keysig(keysigs.value(0)->keySignature());
+                  }
+            else {
+                  // staff-specific keysigs
+                  foreach(int st, keysigs.keys())
+                        keysig(keysigs.value(st)->keySignature(), st + 1, keysigs.value(st)->visible());
                   }
             }
-      else if (tick == 0)
+      else {
             // always write a keysig at tick = 0
-            keysig(0);
+            if (m->tick() == 0)
+                  keysig(0);
+            }
 
       TimeSig* tsig = 0;
       for (Segment* seg = m->first(); seg; seg = seg->next()) {
@@ -3946,7 +3967,6 @@ foreach(Element* el, *(score->gel())) {
                         attr.doAttr(xml, true);
                         xml.tag("divisions", MScore::division / div);
                         }
-                  printf("issue12382 m=%p score=%p)\n", m, score);
                   // output attributes at start of measure: key, time
                   keysigTimesig(m, strack, etrack);
                   // output attributes with the first actual measure (pickup or regular) only
